2006-03-15  Tom Tromey  <tromey@redhat.com>

	* java/lang/StrictMath.java (signum): New methods.

2006-03-15  Tom Tromey  <tromey@redhat.com>

	* .settings/org.eclipse.jdt.core.prefs: Set tabs to 8 spaces.

2006-03-15  Lillian Angel  <langel@redhat.com>

	PR classpath/24211
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c
	(Java_gnu_java_awt_peer_gtk_GdkGraphics2D_cairoSurfaceSetFilterUnlocked):
	Added check to avoid segmentation fault.

2006-03-15  Lillian Angel  <langel@redhat.com>

	* java/awt/Container.java
	(getComponentAt): Fixed documentation.
	(getComponentAt): Likewise.

2006-03-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(dragBuffer): New field.
	(dragBufferInitialized): New field.
	(paint): Added facility for buffered dragging of components.
	(initializeDragBuffer): New method.
	(getConditionForKeyStroke): Removed deprecated flag. Adjusted
	API docs.
	* javax/swing/plaf/basic/BasicInternalFrameUI.java
	(BorderListener.mouseDragged): Turn on buffered dragging.
	(BorderListener.mouseReleased): Turn off buffered dragging.

2006-03-15  Lillian Angel  <langel@redhat.com>

	* java/awt/Container.java
	(getComponentAt): Fixed documentation.
	(getComponentAt): Likewise.
	(findComponentAt): Likewise.
	(findComponentAt): Likewise.

2006-03-15  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/basic/BasicInternalFrameTitlePane.java
	(PropertyChangeHandler.propertyChange): Call enableActions().
	Fixed 'iconable' property name.

2006-03-15  Chris Burdess  <dog@gnu.org>

	Fixes PR 26700
	* gnu/xml/stream/XMLParser.java: Fix for detectEncoding false positive.

2006-03-15  Roman Kennke  <kennke@aicas.com>

	* examples/gnu/classpath/examples/swing/Demo.java:
	(desktop): New field.
	(mkMenuBar): Added new subdemos.
	(mkButtonWorld): Removed.
	(CheckCellRenderer): Moved to ListDemo.
	(LabelCellRenderer): Moved to ListDemo.
	(mkTreeWorld): Moved to TreeDemo.
	(mkDesktopWorld): Removed.
	(mkTabWorld): Moved to TabbedPaneDemo.